--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,7 +2,7 @@
 {
     position: relative;
     background: linear-gradient(to left, #000000fa, #000000d1, #00000000);   
-     padding: 168px 0;
+     padding: 175px 0;
      display: flex;
      /* border-bottom-left-radius: 250px;
      border-bottom-right-radius: 120px; */
@@ -17,7 +17,7 @@
     position:absolute;
     top:0;
     display: block;
-    background: url(../images/ship-2.jpg);
+    background: url(../images/ship-3.jpg);
      background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
@@ -77,25 +77,26 @@
 .Welcome-page .adhir-arora-image
 {
     position: relative;
-}
-.Welcome-page .adhir-arora-image .adhir-pic
-{
-    display: flex;
-    justify-content: center;
+    width: 70%;
+    margin: 20px auto;
+    overflow: hidden;
 }
 .Welcome-page .adhir-arora-image .adhir-pic img
 {
     border-radius: 25px;
+    width: 100%;
+    object-fit: cover;
 }
 .Welcome-page .adhir-image-title
 {
    
     text-align: center;
-    padding: 10px 0px;
+    padding: 10px 0;
     border-radius: 15px;
     position: absolute;
     bottom: 1px;
-    right: 106px;
+    right: 0;
+    left: 0;
     background: rgba(0,0,0,.65);
 }
 .Welcome-page .adhir-image-title .common-para
@@ -308,9 +309,8 @@
 {
   width:100%;
   object-fit:cover;
-  height:350px;
-  border-radius:25px;
-
+  height:300px;
+  padding: 0 20px;
 }
 .home-speakers .speaker-card .speaker-detail
 {
@@ -654,6 +654,12 @@ padding: 50px 40px;
     padding: 100px 0 80px 0;
     position: relative;
 }
+.sponsors-area .sponsor-btn-temp
+{
+    position: relative;
+    padding: 100px 0;
+    text-align: center;
+}
 
 .sponsors-area h2 , p
 {
@@ -712,7 +718,7 @@ padding: 50px 40px;
 
 .blog-area .blog-card .blog-card-pic img
 {
-    height: 320px;
+    height: 220px;
     width: 100%;
     object-fit: contain;
 }
@@ -758,7 +764,6 @@ padding: 50px 40px;
 .contact-area
 {
     background-color: #f8f8f8;
-    padding: 150px;
 }
 
 .contact-area .contact-text input, .contact-email input , .contact-textarea textarea
@@ -910,9 +915,6 @@ padding: 50px 40px;
 }
 @media only screen and (max-width : 1199px)
 {
-    .Welcome-page .adhir-image-title {
-        right: 61px;
-    }
     .home-banner .right .banner-title .banner-small {
         font-size: 29px;
     }
@@ -950,9 +952,6 @@ padding: 50px 40px;
     .Welcome-page .welcome-text p {
         line-height: 26px;
     }
-    .Welcome-page .adhir-image-title {
-        right: 60px;
-    }
     .home-speakers .speaker-card .speaker-detail{
         padding:10px;
     }
@@ -965,9 +964,6 @@ padding: 50px 40px;
         display: block;
     }
 
-    .home-register-step ul li{
-        width: auto;
-    }
 }
 
 @media only screen and (max-width :991px) {
@@ -1014,10 +1010,6 @@ padding: 50px 40px;
 
 @media only screen and (max-width : 767px) {
     
-    .home-banner .count
-    {
-        right: 165px;
-    }
     .Welcome-page .welcome-text
     {
         padding: 20px 40px;
@@ -1096,12 +1088,12 @@ padding: 50px 40px;
         bottom: -39px;
         display: flex;
         justify-content: center;
-        width: 90%;
+        width: 80%;
         margin: auto;
     }
     .home-banner .count .common-timer-box
     {
-        font-size:40px;
+        font-size:28px;
         margin-bottom:10px;
     }
     .home-banner .count .counter-wrapper
@@ -1111,6 +1103,7 @@ padding: 50px 40px;
     .home-banner .count .timer-detail
     {
         margin-bottom:0;
+        font-size: 12px;
     }
     /* ----home about------ */
     .home-about 
@@ -1179,7 +1172,11 @@ padding: 50px 40px;
     }
     .home-speakers .speaker-card .speaker-title
     {
-        font-size:18px;
+        font-size:15px;
+    }
+    .home-speakers .speaker-card img 
+    {
+        padding: 0;
     }
     .home-speakers .speaker-card .speaker-post 
     {
@@ -1189,8 +1186,7 @@ padding: 50px 40px;
     }
     .home-speakers .speaker-card .speaker-detail
     {
-        padding: 25px 20px;
-        height: auto;
+        height: 120px;
     }
     .home-schedule .schedule-circles
     {
