--- a/src/css/home.css
+++ b/src/css/home.css
@@ -40,8 +40,8 @@
 .home-banner .right .theme-color
 {
     color: #0096FF;
-    font-size: 21px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: 600;
     text-transform: uppercase;
 }
 .home-banner .right .banner-title .banner-small
@@ -543,7 +543,6 @@
     color: #212121;
     font-weight:500;
     font-size: 16px;
-    line-height: 1;
     margin-top: 30px;
     font-family: 'Poppins', sans-serif;
 }
@@ -764,6 +763,7 @@ padding: 50px 40px;
 .contact-area
 {
     background-color: #f8f8f8;
+    padding: 40px 0;
 }
 
 .contact-area .contact-text input, .contact-email input , .contact-textarea textarea
@@ -941,6 +941,18 @@ padding: 50px 40px;
         grid-column: span 1;
         grid-row: span 1;
     }
+    .Welcome-page .adhir-arora-image {
+        width: 90%;
+    }
+    .welcome-text .common-heading {
+        font-size: 30px;
+    }
+    .home-about-right .common-heading {
+        font-size: 35px;
+    }
+    .home-speakers .speaker-card .speaker-detail {
+        height: 150px;
+    }
 }
 
 
@@ -969,7 +981,7 @@ padding: 50px 40px;
 @media only screen and (max-width :991px) {
    
     .home-banner .right .theme-color {
-        font-size: 13px;
+        font-size: 21px;
     }
     .home-banner .right .banner-title .banner-small {
         font-size: 21px;
@@ -1006,6 +1018,12 @@ padding: 50px 40px;
     {
         display: none;
     }
+    .Welcome-page .adhir-arora-image {
+        width: 100%;
+    }
+    .welcome-text .common-heading {
+        font-size: 25px;
+    }
 }
 
 @media only screen and (max-width : 767px) {
@@ -1036,9 +1054,15 @@ padding: 50px 40px;
     .contact-area .contact-move {
         padding-left: 10px;
     }
+    .Welcome-page .adhir-arora-image {
+        width: 85%;
+    }
 }
 @media only screen and (max-width : 575px) {
 
+    .home-about-right .common-heading {
+        font-size: 25px;
+    }
     .home-banner {
         padding: 110px 0;
     }
@@ -1049,7 +1073,7 @@ padding: 50px 40px;
         margin-bottom: 0;
     }
     .home-banner .right .theme-color {
-        font-size: 14px;
+        font-size: 16px;
     }
     .Welcome-page .adhir-arora-image {
         position: relative;
@@ -1345,7 +1369,9 @@ padding: 50px 40px;
         width: 75%;
         margin: 20px auto;
     }
-
+    .home-banner .right .theme-color {
+        font-size: 17px;
+    }
 
 }
 @media only screen and (max-width : 430px)
@@ -1595,7 +1621,6 @@ padding: 50px 40px;
 
 }
 
-
 @media only screen and (max-width : 430px)
 { 
     .common-btn, .common-btn-transparent {
@@ -1757,7 +1782,7 @@ padding: 50px 40px;
         font-size: 17px;
     }
     .home-banner .right .theme-color {
-        font-size: 12px;
+        font-size: 14px;
     }
     .home-banner {
         padding: 50px 0;
