--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -28,6 +28,7 @@
 {
     background-color: #f8f8f8;
     padding: 40px;
+    height : 320px;
     border-radius: 25px;
     text-align: center;
     margin: 15px 0;
