--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,25 +1,30 @@
 .theme-section {
   padding: 60px 0;
+  background: #84bce329;
 }
 .theme-section .cards {
   background-color: #f8f8f8;
   padding: 16px;
   border-radius: 25px;
   text-align: center;
-  min-height: 160px;
+  min-height: 196px;
   margin-bottom: 20px;
 }
 .theme-section .main-theme-box u, .theme-section .sub-theme-box u
 {
   font-size: 22px;
+  text-transform: uppercase;
 }
 .theme-section .paragraph-box .common-para
 {
   font-size: 40px;
   color: #0096ff;
+  text-transform: uppercase;
+  line-height: 46px;
+  font-weight: 600;
 }
 .theme-section .sub-theme-box h2 {
-  margin: 0;
+  margin-bottom: 10px;
   padding-top: 22px;
 }
 .theme-section .cards .box-1 p {
@@ -30,6 +35,8 @@
   font-size: 15px;
   margin-bottom: 0;
   text-align: start;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 
@@ -51,7 +58,7 @@
   font-size: 21px;
 }
 .theme-section .cards {
-  min-height: 191px;
+  min-height: 238px;
 }
 }
 
