--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,6 +1,6 @@
 .theme-section {
   padding: 60px 0;
-  background: #84bce329;
+  background: #84bce3ad;
 }
 .theme-section .cards {
   background-color: #f8f8f8;
@@ -17,15 +17,12 @@
 }
 .theme-section .paragraph-box .common-para
 {
-  font-size: 40px;
-  color: #0096ff;
+  font-size: 33px;
+  color: #082ce1;
   text-transform: uppercase;
   line-height: 46px;
   font-weight: 600;
-}
-.theme-section .sub-theme-box h2 {
-  margin-bottom: 10px;
-  padding-top: 22px;
+  
 }
 .theme-section .cards .box-1 p {
   color: #696a87;
