--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -22,6 +22,7 @@
     position: relative;
     font-size: 50px;
     font-weight: 600;
+    text-transform: uppercase;
 }
 
 .contact-single1 .boxes
