--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -2,13 +2,20 @@
   padding: 60px 0;
   background: #84bce3ad;
 }
-.theme-section .cards {
-  background-color: #f8f8f8;
+.theme-section .cards
+{
+  background-color: #0f5ba1;;
   padding: 16px;
   border-radius: 25px;
-  text-align: center;
+  text-align: left;
   min-height: 196px;
   margin-bottom: 20px;
+  display: block;
+  position: relative;
+  border-radius: 4px;
+  z-index: 0;
+  overflow: hidden;
+  text-decoration: none !important;
 }
 .theme-section .main-theme-box u, .theme-section .sub-theme-box u
 {
@@ -21,19 +28,41 @@
   color: #082ce1;
   text-transform: uppercase;
   line-height: 46px;
-  font-weight: 600;
+  font-weight: bold;
   
 }
 .theme-section .cards .box-1 p {
-  color: #696a87;
+  color: #fff;
   line-height: 23px;
   font-weight: 400;
-  color: #696a87;
-  font-size: 15px;
+  font-size: 18px;
   margin-bottom: 0;
   text-align: start;
   text-transform: uppercase;
-  font-weight: 600;
+  font-weight: 500;
+}
+.theme-section .cards:hover::before
+{
+  transform: scale(45);
+}
+.theme-section .cards:hover p
+{
+  color: #fff;
+}
+.theme-section .cards::before
+{
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: -11px;
+  right: -12px;
+  background: #05a3dc;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  transform: scale(1);
+  transform-origin: 50% 50%;
+  transition: transform 0.75s linear;
 }
 
 
