--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -196,8 +196,15 @@
 
 .foot-wrapper .box-7
 {
-    text-align: end;
+    display: flex;
+    justify-content: space-between;
     position: relative;
+}
+.foot-wrapper .box-7 .giks-copyright img
+{
+    height: 27px;
+    padding-right: 10px;
+    padding-top: 4px;
 }
 /* -----common responsive css---- */
 @media only screen and (max-width : 1024px) {
