--- a/src/css/common.css
+++ b/src/css/common.css
@@ -5,6 +5,23 @@ body
     font-weight:400;
     font-size:16px;
 }
+
+/* abstract-common-btn css */
+
+.abstracts-common-btn
+{
+    color: #fff;
+    background-color: #1b2a47;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 12px;
+    padding: 10px;
+    width: 140px;
+
+}
+
+/* abstracts-common-btn css ends */
 a
 {
     text-decoration:none;
