--- a/src/css/common.css
+++ b/src/css/common.css
@@ -6,6 +6,14 @@ body
     font-size:16px;
 }
 
+/* QR CSS */
+.qr-btns
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+/* QR CSS ends */
 /* abstract-common-btn css */
 
 .abstracts-common-btn
