--- a/src/css/home.css
+++ b/src/css/home.css
@@ -757,7 +757,7 @@ padding: 50px 40px;
 {
     font-size: 20px;
     text-align: start;
-    cursor: pointer;
+    cursor: text;
 }
 
 .blog-area .blog-card .blog-card-content span
