--- a/src/css/board.css
+++ b/src/css/board.css
@@ -49,6 +49,9 @@
 
 /* responsive css */
 
-@media only screen and (max-width:767px) {
-    
+@media only screen and (max-width:507px) {
+    .board-programme-section .board-timings td
+    {
+        padding: 0 5px;
+    }
 }
