--- a/src/css/certificatepageui.css
+++ b/src/css/certificatepageui.css
@@ -1,4 +1,4 @@
-.border-line.first-logo img
+/* .border-line.first-logo img
 {
     width: 100%;
     height: auto;
@@ -106,4 +106,89 @@ font-weight: 600;
     .last-area .signature p{
         font-size:10px;
     }
+} */
+.border{
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+.frame{
+    padding:130px 20px;
+}
+.logo{
+    display: flex;
+    justify-content:end;
+}
+.content{
+    font-size: 1rem;
+    letter-spacing: 1px;
+     font-weight: 700; 
+     color: darkblue;
+}
+.content p{
+    text-align: center;
+}
+.heading{
+    text-align: center;
+    line-height: 12px;
+     font-size: 1rem;
+      margin-top: 15px;
+      letter-spacing: 1px;
+      color: darkblue;
+      font-weight: 600;
+}
+.main-text{
+    text-align: center;
+     margin-top:20px;
+     margin-bottom:25px;
+     color:#000077;
+}
+.details{
+    text-align: center;
+    font-size:1.2rem;color:darkblue;
+    font-family: Philosopher; 
+      /* background-image: url(./image/bg.png); */
+       background-repeat: no-repeat;
+       background-size: contain;
+       background-position: center;
+}
+.details span{
+    margin-right:19rem;
+}
+
+.bottom_area{
+    margin-top:50px;
+}
+.bottom_left{
+    text-align: right;
+    padding-right: 80px;
+}
+.bottom_left span{
+    font-size: 1rem;
+    color:darkblue;
+    font-weight:600;
+}
+.bottom_left p{
+    font-size: 1rem;
+    color: #000077;
+    font-weight:700;
+}
+.bottom_right{
+    text-align: left;
+    padding-left: 80px;
+}
+.bottom_right span{
+    font-size: 1rem;
+    color:darkblue;
+    font-weight:600;
+}
+.bottom_right p{
+    font-size: 1rem;
+    color: #000077;
+    font-weight:700;   
+}
+.last_line p{
+    font-size: 1rem;
+    color:#000077;
+    font-weight:700;
 }
