change ui of website

--- a/src/css/abstract.css
+++ b/src/css/abstract.css
@@ -1,5 +1,5 @@
 .common-redirect-banner {
-    background-image: url(../images/NHO-background.jpg);
+    background-image: url(../images/RCW_Building.jpg);
     background-size: cover;
     position: relative;
     padding: 125px 0;
