--- a/src/css/common.css
+++ b/src/css/common.css
@@ -61,7 +61,7 @@ h1,h2,h3,h4,h5,h6
 }
 .common-yellow-color
 {
-    color:#eac600f7;
+    color:#111b69;
 }
 .common-yellow-bg
 {
@@ -129,8 +129,8 @@ h1,h2,h3,h4,h5,h6
     font-size: 14px;
 }
 .common-btn:hover{
-    background:#cfb211f7;
-    border: 1px solid #cfb211f7;
+    background: #f47216;
+    border: 1px solid #f47216;
    
 }
 .common-btn-transparent
@@ -139,8 +139,8 @@ h1,h2,h3,h4,h5,h6
   border:1px solid #fff;
 }
 .common-btn-transparent:hover{
-    background:#cfb211f7;
-    border: 1px solid #cfb211f7;
+    background:#f47216;
+    border: 1px solid #f47216;
 }
 .common-form-heading
 {
