--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,8 +2,8 @@
 {
     position: relative;
     background: linear-gradient(to left, #000000eb, #0000008f, #00000000);   
-     padding: 175px 0;
-     display: flex;
+    
+     
      /* border-bottom-left-radius: 250px;
      border-bottom-right-radius: 120px; */
     
@@ -23,12 +23,19 @@
     left: 0;
     width: 100%;
 }
+.container-home{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
 
 .home-banner::before{
     position:absolute;
     top:0;
     display: block;
-    background: url(../images/ship-4.jpg);
      background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
@@ -67,6 +74,11 @@
     display: block;
     line-height: 45px;
     margin-bottom: 14px;
+}
+.homepage-video-section{
+    width: 100%;
+    z-index: -1;
+    position: relative;
 }
 /* .home-banner .banner-bottom
 {
@@ -183,7 +195,7 @@
     border-style: solid;
     border-width: 0px 0px 3px 0px;
     border-radius: 20px;
-    border-color: #eac600f7;
+    border-color: #111b69;
     background-color: #f8f8f8;
     width: 90%;
     margin: 30px 0 30px auto;
@@ -209,7 +221,7 @@
     border-radius: 25px 25px 25px 25px;
     display: flex;
     margin-top: 10px;
-    min-height: 210px;
+    min-height: 253px;
     background-color: #fff;
     position: relative;
     box-shadow: 0px 0px 25px 0px rgb(0 0 0 / 10%);
@@ -842,10 +854,10 @@ padding: 50px 40px;
 .contact-area .contact-move .contact-icon i
 {
     font-size: 35px;
-    border: 2px solid #eac600f7;
+    border: 2px solid #111b69;
     border-radius: 50%;
    
-    color: #eac600f7;
+    color: #111b69;
     display: inline-block;
     width: 80px;
     height: 80px;
