--- a/src/css/important.css
+++ b/src/css/important.css
@@ -13,8 +13,9 @@
     padding: 10px 2px;
     border-radius: 23px;
     width: 60%;
+    color: #ffffff;
     text-align: center;
-    background: #eac600f7;
+    background: #111b69;
     margin: 10px;
 }
 .important-dates-section .table .imp-table-date
