--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,9 +1,9 @@
 .foot-wrapper
 {
-    background-image: url('../images/event-1.jpg.JPEG');
+    background-image: url('../images/43rd inca international congress concept logo-01-01.png');
     background-size: cover;
     background-position: center;
-   
+
     color: #fff;
     position: relative;
     padding: 120px 0 40px 0;
