--- a/src/css/home.css
+++ b/src/css/home.css
@@ -195,7 +195,7 @@
     border-style: solid;
     border-width: 0px 0px 3px 0px;
     border-radius: 20px;
-    border-color: #111b69;
+    border-color: #75b00f;
     background-color: #f8f8f8;
     width: 90%;
     margin: 30px 0 30px auto;
@@ -854,10 +854,10 @@ padding: 50px 40px;
 .contact-area .contact-move .contact-icon i
 {
     font-size: 35px;
-    border: 2px solid #111b69;
+    border: 2px solid #75b00f;
     border-radius: 50%;
    
-    color: #111b69;
+    color: #75b00f;
     display: inline-block;
     width: 80px;
     height: 80px;
